--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,19 @@
     <title>FilmDev</title>
   </head>
   <body>
-    <div class="main-container">dsdsdsd</div>
+    <div class="main-container">
+      <h1>FilmDev</h1>
+      <div class="text-container">
+        <p>Explore your <span class="color">favorite</span> movies</p>
+        <p>with <span class="color">FilmDev</span></p>
+        <p>
+          made by <a class="fufako" href="https://github.com/fufako">fufako</a>
+        </p>
+      </div>
+      <p class="small-info">
+        *movies that are in the MongoDB sample database of course
+      </p>
+      <button class="movies-btn">Explore</button>
+    </div>
   </body>
 </html>
