Change explore btn make it a link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
       <p class="small-info">
         *movies that are in the MongoDB sample database of course
       </p>
-      <button class="movies-btn">Explore</button>
+      <a href="movies" class="movies-btn">Explore</a>
     </div>
   </body>
 </html>
