--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,6 +42,8 @@ h1 {
   color: #ffdb58;
 }
 .movies-btn {
+  text-align: center;
+  text-decoration: none;
   margin-top: 20px;
   width: 400px;
   height: 93px;
@@ -51,8 +53,6 @@ h1 {
   font-family: "Bebas Neue", cursive;
   box-shadow: inset 0 0 0 0 #ffdb58;
   color: #ffdb58;
-  margin: 0 -0.25rem;
-  padding: 0 0.25rem;
   transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 .movies-btn:hover {
