--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <title>Movies</title>
+    <title>FilmDev</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <h1>FilmDev</h1>
+      <div class="movies-container">Movies</div>
+    </div>
+  </body>
 </html>
