Fix show more movies logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="main-container">
-      <h1>FilmDev</h1>
+      <h1><a href="/">FilmDev</a></h1>
       <div class="text-container">
         <p>Explore your <span class="color">favorite</span> movies</p>
         <p>with <span class="color">FilmDev</span></p>
