--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,17 @@ body {
 }
 h1 {
   font-size: 7rem;
+  transform: scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+h1:hover {
+  transform: scale(1.05);
+}
+h1 a {
+  text-decoration: none;
+  color: black;
+}
+
 .text-container {
   text-align: left;
   font-size: 4.5rem;
@@ -34,9 +44,11 @@ h1 {
 .fufako {
   color: #ffdb58;
   text-decoration: none;
+  transition: color 0.3s ease-in-out;
 }
 .fufako:hover {
   color: white;
+  transition: color 0.3s ease-in-out;
 }
 .color {
   color: #ffdb58;
