--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="main-container">
-      <h1><a href="/">FilmDev</a></h1>
+      <h1>
+        <a href="/">FilmDev</a>
+      </h1>
       <div class="movies-container">Movies</div>
 
       <ul>
