Add styling to movies page, add placeholder img if movie poster not found

--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -12,16 +12,21 @@
       <h1>
         <a href="/">FilmDev</a>
       </h1>
-      <div class="movies-container">Movies</div>
-      <% for(movie of movies) {%>
-      <a href="<%= movie.url %>">
-        <div class="movie">
-          <img src="<%= movie.poster %>" alt="<%= movie.title %>_poster" />
-          <p class="title"><%= movie.title %> (<%= movie.year %> )</p>
-        </div>
-      </a>
-      <% } %>
-
+      <div class="movies-container">
+        <% for(movie of movies) {%>
+        <a href="<%= movie.url %>">
+          <div class="movie">
+            <img
+              src="<%= movie.poster %>"
+              alt="<%= movie.title %>"
+              class="poster"
+              onerror="this.onerror=null;this.src='/images/film-poster-placeholder.png';"
+            />
+            <p class="title"><%= movie.title %> (<%= movie.year %> )</p>
+          </div>
+        </a>
+        <% } %>
+      </div>
       <form action="" method="post" onsubmit="return true">
         <button name="more" type="submit">More</button>
       </form>
