--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,3 +72,34 @@ h1 a {
   color: black;
   cursor: pointer;
 }
+
+.movies-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 450px));
+  width: 90%;
+  gap: 10px;
+  justify-content: center;
+}
+.movies-container a {
+  text-decoration: none;
+  color: black;
+}
+.movie {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border: rgb(128, 128, 128, 0.2) solid 1px;
+  min-height: 600px;
+  max-height: 600px;
+}
+.poster {
+  width: 300px;
+  height: 460px;
+}
+.title {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 10px;
+  height: 100%;
+}
