--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+* {
+  outline: 1px solid red;
+}
 body {
   margin: 0;
 }
@@ -87,7 +90,6 @@ h1 a {
 .movie {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
   border: rgb(128, 128, 128, 0.2) solid 1px;
   min-height: 600px;
@@ -96,10 +98,70 @@ h1 a {
 .poster {
   width: 300px;
   height: 460px;
+  margin-top: 35px;
 }
-.title {
+.title a {
   text-align: center;
   font-size: 1.5rem;
   margin: 10px;
   height: 100%;
+  display: block;
+}
+.more {
+  text-align: center;
+  text-decoration: none;
+  margin: 40px;
+  width: 400px;
+  height: 73px;
+  font-size: 2.5rem;
+  background-color: black;
+  border: 0;
+  font-family: "Bebas Neue", cursive;
+  box-shadow: inset 0 0 0 0 #ffdb58;
+  color: #ffdb58;
+  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+.more:hover {
+  box-shadow: inset 400px 0 0 0 #ffdb58;
+  color: black;
+  cursor: pointer;
+}
+.go-top {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: black;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+}
+.go-top:hover {
+  background-color: #ffdb58;
+  transition: background-color 0.3s ease-in-out;
+}
+.poster-detail {
+  width: 400px;
+  height: 600px;
+}
+.movie-details-container {
+  display: grid;
+  grid-template-columns: 1fr 2.5fr;
+  grid-template-areas:
+    "header header"
+    "poster main"
+    "poster main";
+  width: 70%;
+}
+.top-panel {
+  grid-area: header;
+}
+.left-panel {
+  grid-area: poster;
+}
+.right-panel {
+  grid-area: main;
 }
