Change homepage text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <div class="main-container">
       <h1><a href="/">FilmDev</a></h1>
       <div class="text-container">
-        <p>Explore your <span class="color">favorite</span> movies</p>
+        <p>Explore <span class="color">oldschool</span> movies</p>
         <p>with <span class="color">FilmDev</span></p>
         <p>
           made by <a class="fufako" href="https://github.com/fufako">fufako</a>
