--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -104,6 +104,11 @@ h1 a {
   margin: 10px;
   height: 100%;
   display: block;
+  transform: scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.title a:hover {
+  transform: scale(1.05);
 }
 .more {
   text-align: center;
